# UmbraX-Engine

./: .gitignore  ARCHITECTURE.md  CODEASSIST_GUIDE.md  ICONS_AND_RESOURCES.md  LICENSE  QUICKSTART.md  README.md  README_FINAL.md  README_FINAL_ULTRA_COMPLETE.md  VERIFICATION.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/quantum/engine/: SplashActivity.kt
app/src/main/java/com/quantum/engine/demo/: MainActivity.kt
app/src/main/java/com/quantum/engine/launcher/: LauncherActivity.kt
app/src/main/res/drawable/: splash_background.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
qe-ai/: build.gradle.kts
qe-core/: build.gradle.kts
qe-editor/: build.gradle.kts
qe-math/: build.gradle.kts
qe-particles/: build.gradle.kts
qe-physics/: build.gradle.kts
qe-renderer-common/: build.gradle.kts
qe-renderer-gles/: build.gradle.kts
qe-renderer-vulkan/: CMakeLists.txt  build.gradle.kts
qe-renderer-vulkan/src/main/: AndroidManifest.xml
qe-renderer-vulkan/src/main/cpp/: vk_buffer.cpp  vk_compute.cpp  vk_device.cpp  vk_instance.cpp  vk_material.cpp  vk_mesh.cpp  vk_pipeline.cpp  vk_renderer.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_texture.cpp  vk_utils.cpp  vulkan_jni.cpp  vulkan_renderer_native.cpp
qe-renderer-vulkan/src/main/cpp/include/: vulkan_renderer_native.h
qe-renderer-vulkan/src/main/java/com/quantum/engine/renderer/vulkan/: VulkanRenderer.kt
qe-scripting/: build.gradle.kts
(+35 files in other folders)
